# ai-200-module-automation

./: .gitignore  README.md  cleanup.ps1  setup.ps1
1_implement-container-app-hosting-azure/1_acr-tasks-python/: azdeploy.ps1  azdeploy.sh
1_implement-container-app-hosting-azure/2_app-svc-container-python/: azdeploy.ps1  azdeploy.sh
2_deploy-manage-apps-azure-container-apps/1_aca-deploy-python/: azdeploy.ps1  azdeploy.sh
2_deploy-manage-apps-azure-container-apps/2_aca-manage-python/: azdeploy.ps1  azdeploy.sh
2_deploy-manage-apps-azure-container-apps/3_aca-scale-python/: azdeploy.ps1  azdeploy.sh  module3.ps1
3_deploy-monitor-apps-azure-kubernetes-service/1_aks-deploy-python/: azdeploy.ps1  azdeploy.sh  module1.ps1
3_deploy-monitor-apps-azure-kubernetes-service/2_aks-configure-python/: azdeploy.ps1  azdeploy.sh  module2.ps1
3_deploy-monitor-apps-azure-kubernetes-service/2_aks-configure-python/api/: Dockerfile  main.py  pyproject.toml
3_deploy-monitor-apps-azure-kubernetes-service/3_aks-troubleshoot-python/: azdeploy.ps1  azdeploy.sh  module3.ps1
4_develop-ai-solutions-azure-cosmos-db/1_cosmosdb-build-query-python/: module1.ps1
4_develop-ai-solutions-azure-cosmos-db/2_cosmosdb-implement-vector-python/: azdeploy.ps1  azdeploy.sh  module2.ps1
4_develop-ai-solutions-azure-cosmos-db/3_cosmosdb-optimize-query-python/: azdeploy.ps1  azdeploy.sh  module3.ps1
deploy-manage-apps-azure-container-apps/: module1.ps1  module2.ps1  module3.ps1
implement-container-app-hosting-azure/: module1.ps1  module2.ps1
(+63 files in other folders)
